making local blast compatible with BLAST manager